k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hrms-backend
  namespace: hrms
spec:
  type: ClusterIP
  selector:
    app: hrms-backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
