k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hrms-postgres
  namespace: hrms
spec:
  type: ClusterIP
  selector:
    app: hrms-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
